# rimba

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  bench.env.sh.example
.ai/: AGENTS.md  CLAUDE.md  radio-silent-workflow.md
boards/proto1-fgh100m/: sdkconfig.defaults  sdkconfig.defaults.esp32s3
cmake/mm-fw-gen/: morse_firmware.cmake
cmake/mm-fw-gen/firmware/: CMakeLists.txt  Kconfig  idf_component.yml
docs/: comparison.md  halow-mesh-dtn-spec.md  rimba-battery-analysis.md  rimba-development-plan.md  rimba-hardening-plan.md  rimba-ibss-hardening-todo.md  rimba-ibss-impl-comparison.md  rimba-ibss-linux-interop-runbook.md  rimba-ibss-milestones.md  rimba-ibss-test-plan.md  rimba-latency-bandwidth.md  rimba-linux-node-setup.md  rimba-mesh-ap-milestones.md  rimba-mesh-ap-porting.md  rimba-mesh-comparison.md  rimba-mesh-topology.md  rimba-mm6108-powersave-analysis.md  rimba-protocol-spec.md  rimba-routing-comparison.md  rimba-todo.md  summary.md
docs/design-specification/: rimba-battery-analysis.md  rimba-mesh-comparison.md  rimba-mm6108-powersave-analysis.md  rimba-rtc-comparison.md
docs/ibss/: rimba-ibss-milestones.md  rimba-ibss-test-plan.md
docs/mesh-ap/: ampe-siv-validate.py  rimba-mesh-20-hwcrypto-forward-investigation.md  rimba-mesh-80211s-code-map.md  rimba-mesh-ampdu-aggregation-design.md  rimba-mesh-ap-esp32-stage1-codemap.md  rimba-mesh-ap-esp32-stage4-datapath-design.md  rimba-mesh-ap-mesh-gate-discovery-design.md  rimba-mesh-ap-milestones.md  rimba-mesh-ap-s6-interop-plan.md  rimba-mesh-frag-codemap.md  rimba-mesh-p3-sae-plan.md  rimba-mesh-plink-liveness-codemap.md  rimba-mesh-security-codemap.md
docs/reference/: rimba-bench-devices.md  rimba-halow-ps-esp32-vs-linux-ap.md  rimba-linux-halow-monitor.md  rimba-linux-node-setup.md
docs/regression/: rimba-regression-results.md  rimba-regression-suite-guide.html  rimba-regression-suite-guide.md
docs/worklog/: 2026-06-17-mm6108-halow-bringup.md  2026-06-17-phase1-bringup.md  2026-06-18-halow-ap-sta-ping.md  2026-06-18-risk01-ibss-recon.md  2026-06-19-linux-node-halow-bringup.md  2026-06-19-p0-multinode-bench.md  2026-06-19-session-handoff-2.md  2026-06-19-session-handoff.md  2026-06-20-ibss-adoption-interop-phantom.md  2026-06-21-mm6108-powersave-decompile.md  2026-06-21-phase1-validation-complete.md  2026-06-22-mesh-ap-twt.md  2026-06-23-ap-multinode-twt-hwtest.md  2026-06-23-ap-sta-ceiling-100-psram.md  2026-06-23-ap-sta-ceiling-255.md  2026-06-23-regression-stress-test.md  2026-06-24-firmware-vendor-sourcing.md  2026-06-24-mesh-80211s-port-recon.md  2026-06-24-twt-action-frame.md  2026-06-25-mesh-p1-vif-beacon.md  2026-06-26-linux-mesh-reference.md  2026-06-26-mesh-ap-perf-iperf-ping.md  2026-06-26-mesh-mpm-peering-frames.md  2026-06-27-linux-secured-mesh-reference.md  2026-06-27-mesh-security-phase1-keyinstall.md  2026-06-27-mesh-security-phase2-ampe.md  2026-06-27-mesh-security-phase3-sae.md  2026-06-30-mesh-leaf-single-hop-toggle.md  2026-06-30-mesh-security-sae-hardening.md  2026-07-02-mesh-20-hwcrypto-reverify.md  2026-07-02-mesh-dynamic-path-table.md  2026-07-02-mesh-hwmp-multipath-dedup-sn.md  2026-07-02-mesh-multinode-onair-validation.md  2026-07-02-mesh-p6c-airtime-metric.md  2026-07-02-mesh-peer-table-growth.md  2026-07-02-mesh-real-rc-airtime-metric.md  2026-07-04-halow-sta-powersave-ppk2.md  2026-07-05-board2-ps-vs-linux-mesh-ap.md  2026-07-05-esp32-ap-ps-retest-matched-1179.md  2026-07-05-esp32-ap-wnm-responder-and-ps-beacon.md  (+55 more)
firmware/: README.md
firmware/c6-harness/: CMakeLists.txt  README.md
firmware/rimba-deepsleep-cycle/: CMakeLists.txt  README.md
firmware/rimba-downlink-test/: CMakeLists.txt
firmware/rimba-doze-hold/: CMakeLists.txt
firmware/rimba-halow-ap/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/rimba-halow-ap-perf/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/rimba-halow-ibss/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/rimba-halow-mesh/: CMakeLists.txt  README.md
firmware/rimba-halow-mesh-ap/: CMakeLists.txt  README.md
firmware/rimba-halow-mesh-monitor/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/rimba-halow-mesh-perf/: CMakeLists.txt  sdkconfig.defaults
firmware/rimba-halow-mesh-perf/main/: CMakeLists.txt  app_main.c  idf_component.yml
firmware/rimba-halow-mesh/main/: CMakeLists.txt  app_main.c
firmware/rimba-halow-meshscan/: CMakeLists.txt
firmware/rimba-halow-scan/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/rimba-halow-sta/: CMakeLists.txt  README.md
firmware/rimba-halow-sta-perf/: CMakeLists.txt  README.md
firmware/rimba-halow-sta/main/: CMakeLists.txt  app_main.c
firmware/rimba-hello/: CMakeLists.txt  README.md  sdkconfig.defaults.esp32s3
firmware/rimba-sleep-test/: CMakeLists.txt
firmware/rimba-standby-test/: CMakeLists.txt
firmware/rimba-twt-assoc/: CMakeLists.txt  README.md
firmware/test-ampdu-cap/: CMakeLists.txt  README.md
firmware/test-ap-sta-ping/: README.md
firmware/test-apsta-ap/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/test-apsta-sta/: CMakeLists.txt  README.md
firmware/test-c6-trigger/: CMakeLists.txt  README.md
firmware/test-deepsleep-cycle/: CMakeLists.txt
firmware/test-ibss/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/test-idle/: CMakeLists.txt  sdkconfig.defaults
firmware/test-mesh-ae/: CMakeLists.txt  sdkconfig.defaults
firmware/test-mesh-ae/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-ap-gate/: README.md  (+2 more)
firmware/test-mesh-gate-node/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-gate-relay/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-gate-rx/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-gate-sta/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-leaf/main/: CMakeLists.txt  app_main.c
firmware/test-mesh-linux/main/: CMakeLists.txt  app_main.c
firmware/test-power/main/: CMakeLists.txt  app_main.c
tools/: esp_usb_power.py  mesh_beacon_cap.py  mesh_ccmp_verify.py  mesh_grab_fwd.py  mesh_rann_cap.py  ppk2_hold.py
(+217 files in other folders)
